crates/djls-extraction/tests/snapshots/corpus__extraction_snapshots@packages__Django__5.2.11__tests__template_tests__templatetags__inclusion.py.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/Django/5.2.11/tests/template_tests/templatetags/inclusion.py
---
tag_rules:
  "tests.template_tests.templatetags.inclusion::inclusion_explicit_no_context":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_explicit_no_context_from_template":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_extends1":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_extends2":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_keyword_only_default":
    arg_constraints:
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: kwarg
        required: false
        kind: Keyword
        position: 0
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_no_params":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_no_params_from_template":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_no_params_with_context":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_no_params_with_context_from_template":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_one_default":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: one
        required: true
        kind: Variable
        position: 0
      - name: two
        required: false
        kind: Variable
        position: 1
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_one_default_from_template":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: one
        required: true
        kind: Variable
        position: 0
      - name: two
        required: false
        kind: Variable
        position: 1
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_one_param":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_one_param_from_template":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_only_unlimited_args":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: args
        required: false
        kind: VarArgs
        position: 0
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_only_unlimited_args_from_template":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: args
        required: false
        kind: VarArgs
        position: 0
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_params_and_context":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_params_and_context_from_template":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_tag_takes_context_without_params":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_tag_use_l10n":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_tag_without_context_parameter":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_two_params":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: one
        required: true
        kind: Variable
        position: 0
      - name: two
        required: true
        kind: Variable
        position: 1
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_two_params_from_template":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: one
        required: true
        kind: Variable
        position: 0
      - name: two
        required: true
        kind: Variable
        position: 1
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_unlimited_args":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: one
        required: true
        kind: Variable
        position: 0
      - name: two
        required: false
        kind: Variable
        position: 1
      - name: args
        required: false
        kind: VarArgs
        position: 2
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_unlimited_args_from_template":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: one
        required: true
        kind: Variable
        position: 0
      - name: two
        required: false
        kind: Variable
        position: 1
      - name: args
        required: false
        kind: VarArgs
        position: 2
    supports_as_var: false
  "tests.template_tests.templatetags.inclusion::inclusion_unlimited_args_kwargs":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: one
        required: true
        kind: Variable
        position: 0
      - name: two
        required: false
        kind: Variable
        position: 1
      - name: args
        required: false
        kind: VarArgs
        position: 2
    supports_as_var: false
filter_arities: {}
block_specs: {}
