crates/djls-extraction/tests/snapshots/corpus__extraction_snapshots@packages__Django__5.2.11__tests__template_tests__templatetags__testtags.py.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/Django/5.2.11/tests/template_tests/templatetags/testtags.py
---
tag_rules: {}
filter_arities:
  "tests.template_tests.templatetags.testtags::upper":
    expects_arg: false
    arg_optional: false
block_specs: {}
